tests/invalids/missingSemiStmt.gt
proc main ()
    int m;
begin
    read m
end
